devprojects.css
@import './vars.css';

main {
    max-width: 100vw !important;
}

#devHero {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    flex-direction: column;
    height: 25vh;
    margin: -48px -24px 24px -24px !important;
    padding: 5rem 0;
    border-bottom-left-radius: var(--border-radius3);
    border-bottom-right-radius: var(--border-radius3);
    align-items: center;
}

#devHero h3 {
    color: var(--blue);
    font-weight: 500;
}




div#sectionLinks {
    margin: auto;
}

div#sectionLinks button {
    margin-right: 1rem;
    background-color: var(--light-grey);
}
div#sectionLinks button:hover {
    background-color: rgb(208, 208, 208);
}

div#sectionLinks button p{
    color: black;
}

section#bloomBook {
    display: flex;
    justify-content: center;
    flex-direction: column;
}


#bloomBookGrid {
    display: grid;
    grid-template-rows: repeat(3, 180px);
	grid-template-columns: repeat(4, 180px);
    gap: 16px;
    margin: auto;
    margin-top: 9rem;
    margin-bottom: 4rem;
}


#bloomBook div {
    border-radius: var(--border-radius4);
    box-sizing: border-box;
}

#bloomBook div.detail h4 {
    line-height: 1.2rem;
    margin: 24px 16px;
}

#bloomBook div.detail p {
    font-size: 16px;
    margin: -4px 16px;
    
}



/* gridrowstart, gridrowned, gridcolumnstart, gridcolumnend*/
#bloomBookGrid #growth {
    grid-area: 1 / 1 / 1 / 2;
    background: var(--light-grey);
}
#bloomBookGrid #reminders {
    grid-area: 2 / 4 / 2 / 4;
    background: var(--dark-grey1);
    color: white;
}
#bloomBookGrid #camera {
    grid-area: 3 / 3 / 3/ 3;
    background: var(--light-grey);
}

#bloomBook #mockup {
    background-color: #ecf3d9;
    display: flex;
    flex-direction: column;
    justify-content: center;
    grid-area: 1 / 2 / 3 / 4;
}



#bloomBook #mockup button {
    position: relative;
    bottom: 120%;
    left: 5%;
}


#bloomBook #mockup button p {
    color: white;
}



#aiDescription{
    max-width: 800px;
    margin: auto;
    margin-top: 10rem;
    margin-bottom: 3rem;
}

#bloomBookDescription {
    margin: auto;
    text-align: center;
    max-width: var(--screen-sm);
}



section#acmAI div:not(:first-child) {
    background-color: var(--light-grey);
    height: 50vh;
    max-width: 800px;
    max-height: 450px;
    margin: auto;
    justify-content: centers;
    border-radius: var(--border-radius4);
    margin-top: 2rem;
    display: flex;
    padding: 48px 48px 0 48px;
    overflow-y: hidden;
    box-sizing: border-box;
    
}

section#acmAI div:not(:first-child)  img {
    max-width: 450px;
    margin: auto;

}

section#acmAI p, section#bloomBook p, section#vgdc p{
    color: var(--text-dark-grey);
}


section#vgdc {
    margin-top: 25rem;
    margin-bottom: 300px;
}


section#vgdc #vgdcDescription { 
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 0 -24px !important;
}

section#vgdc #vgdcDescription div:first-child { 
    margin-left: 20rem;
    margin-top: 10rem;
    max-width: var(--screen-sm);
}


section#vgdc #vgdcNews {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    margin: -1600px -24px !important;
}

section#vgdc #vgdcNews div {
    margin-right: 10rem;
    max-width: 400px;

}

section#vgdc #vgdcNews #newsImage{

    width: 700px;

}


@media (max-width: 920px) {

    #bloomBookGrid {
        grid-template-rows: repeat(5, 180px) !important;
	    grid-template-columns: 100% !important;
        margin: 8rem auto;
    }

    #bloomBookGrid div {
        width: 100%;
        padding: var(--padding5);
    }
    #bloomBookGrid #mockup {
        grid-area: 1 / 1 / 3 / 1;
    }
    #bloomBook #mockup button {
        left: 1%;
    }
    #bloomBookGrid #growth {
        grid-area: 3/ 1 / 3 / 1;
    }
    #bloomBookGrid #reminders {
        grid-area: 4/ 1 / 4 / 1;
    }
    #bloomBookGrid #camera {
        grid-area: 5 / 1 / 5 / 1;
    }
    #bloomBook #mockup #mockupImage {
        width: 280px;
    }
}

@media (max-width: 1000px) {
    section#vgdc {
        margin-top: 10rem;
    }
    

    section#vgdc #vgdcDescription { 
        flex-direction: column !important;
    }

    section#vgdc #vgdcDescription div:first-child { 
        margin: auto;
        left: 0% !important;
    }


    section#vgdc #vgdcDescription #homeImage {
        width: 600px;
        transform: translateY(-120px) !important;
    }


    section#vgdc #vgdcDescription { 
        display: flex;
        flex-direction: column;
    }
    
    section#vgdc #vgdcDescription div:first-child { 
        margin: 24px;
    }
    
    
    section#vgdc #vgdcNews {
        flex-direction: column;
        margin: -900px -24px !important;
    }
    
    section#vgdc #vgdcNews div {
        margin: 24px;
        margin-top: 2rem;
        margin-bottom: 6rem;
    
    }
    
    section#vgdc #vgdcNews #newsImage{
        width: 500px;
    }

}

